# MTGTag

./: .gitignore  README.md  pyproject.toml  setup.py
data/: most_important_tags.json  tag_definitions.json
docs/: API.md  ARCHITECTURE.md
scripts/: 1_diagnose_tags.py  2_clean_tags.py  3_domain_adapt_model.py  4_train_classifier.py  5_classify_and_tune.py  6_bulk_classify.py  run_pipeline.py
src/mtgtag/: __init__.py  config.py
src/mtgtag/pipeline/: __init__.py  classify.py  clean.py  diagnose.py  domain_adapt.py  optimize.py  train.py
src/mtgtag/utils/: __init__.py  data.py  logging.py
